--- a/slides/EDUC641_2_categ_2.html
+++ b/slides/EDUC641_2_categ_2.html
@@ -4,9 +4,12 @@
     <title>Examining the relationship between categorical variables</title>
     <meta charset="utf-8" />
     <meta name="author" content="TBD" />
-    <script src="EDUC641_2_categ_2_files/header-attrs-2.9/header-attrs.js"></script>
+    <script src="EDUC641_2_categ_2_files/header-attrs-2.11/header-attrs.js"></script>
     <link href="EDUC641_2_categ_2_files/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link rel="stylesheet" href="new.css" type="text/css" />
+    <link href="EDUC641_2_categ_2_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
+    <link href="EDUC641_2_categ_2_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="my_custom.css" type="text/css" />
+    <link rel="stylesheet" href="xaringanthemer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
