--- a/slides/EDUC641_2_categ_1.html
+++ b/slides/EDUC641_2_categ_1.html
@@ -4,9 +4,12 @@
     <title>Summarizing and displaying categorical data</title>
     <meta charset="utf-8" />
     <meta name="author" content="TBD" />
-    <script src="EDUC641_2_categ_1_files/header-attrs-2.9/header-attrs.js"></script>
+    <script src="EDUC641_2_categ_1_files/header-attrs-2.11/header-attrs.js"></script>
     <link href="EDUC641_2_categ_1_files/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link rel="stylesheet" href="new.css" type="text/css" />
+    <link href="EDUC641_2_categ_1_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
+    <link href="EDUC641_2_categ_1_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="my_custom.css" type="text/css" />
+    <link rel="stylesheet" href="xaringanthemer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -24,7 +27,7 @@ class: center, middle, inverse, title-slide
 
 &lt;img src="Roadmap_1.png" width="80%" style="display: block; margin: auto;" /&gt;
 
-&lt;span style="color:blue"&gt; *This unit borrows heavily (with permission) from John B. Willett's course S-010Y* &lt;/span&gt;
+.blue[*This unit borrows heavily (with permission) from John B. Willett's course S-010Y*]
 
 ---
 # The story behind the data
@@ -44,11 +47,11 @@ class: center, middle, inverse, title-slide
 --
 
 &lt;br&gt;
-&lt;span style="color:blue"&gt; **Our motivating question: Were convicted murderers more likely to be sentenced to death in Georgia if they killed someone Black or if they killed someone White?** &lt;/span&gt;
+.blue[**Our motivating question: Were convicted murderers more likely to be sentenced to death in Georgia if they killed someone Black or if they killed someone White?**]
 
 --
 
-&lt;span style="color:red"&gt; *Note: Racial bias may exist in the criminal justice system irrespective of our answer to this question. Exploring such an issue would knit together more complete evidence from multiple research traditions.*&lt;/span&gt;
+.red[*Note: Racial bias may exist in the criminal justice system irrespective of our answer to this question. Exploring such an issue would knit together more complete evidence from multiple research traditions.*]
 
 ---
 # Goals of the unit
