--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -227,7 +227,7 @@ pre code {
 <li><p>What is the research question? What are the predictor variable(s) and outcome variable(s)?</p></li>
 <li><p>Present the summary statistics of only the predictor and outcome variables in table(s), which should include the sample size, the mean and standard deviation of continuous variables, and the percentage for each category of categorical variables. Based on the table, describe what you observe.</p></li>
 <li><p>Visualize the relationship between the predictor and outcome variables in a plot and describe what you observe.</p></li>
-<li><p>State your null hypothesis and the hypothesis testing you choose. Report and interpret your results and briefly discuss the substances of your findings.</p></li>
+<li><p>Describe your method, report your results, and discuss your findings.</p></li>
 </ul>
 </div>
 
