Update table in syllabus

--- a/syllabus.html
+++ b/syllabus.html
@@ -1175,52 +1175,93 @@ Lectures
 <h1>Student Engagement Inventory</h1>
 <p>Graduate students are expected to perform work of high quality and quantity, typically with forty hours of student engagement for each student credit hour. For this course, the following table shows the number of hours a typical student would expect to spend in each of the following activities:</p>
 <table>
+<colgroup>
+<col width="35%" />
+<col width="20%" />
+<col width="44%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th>Educational activity</th>
+<th>Hours</th>
+<th>Explanatory comments</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td>Class attendance</td>
+<td>30</td>
+<td>TBD frequency</td>
 </tr>
 <tr class="even">
 <td>Class reading and prep</td>
+<td>20</td>
+<td>Includes reading and review of slides</td>
 </tr>
 <tr class="odd">
 <td>Homework Assignments</td>
+<td>40</td>
+<td>Homework assignments will take 10 hours each (on avg.)</td>
 </tr>
 <tr class="even">
 <td>Final</td>
+<td>30</td>
+<td>Includes familiarization with data, data analysis, preparation of displays and writing</td>
 </tr>
 <tr class="odd">
 <td><strong>Total hours</strong></td>
+<td><strong>120</strong></td>
+<td><strong>These are approximations.</strong> Reading and <em>especially</em> analytic time will vary per individual</td>
 </tr>
 </tbody>
 </table>
+<div id="indigenous-recognition-statement" class="section level2">
+<h2>Indigenous Recognition Statement</h2>
+</div>
 <div id="role-of-the-ges" class="section level2">
 <h2>Role of the GEs</h2>
 </div>
 <div id="attendance-and-absence-guidelines" class="section level2">
 <h2>Attendance and Absence Guidelines</h2>
 </div>
-<div id="expected-classroom-behavior" class="section level2">
-<h2>Expected Classroom Behavior</h2>
-</div>
 <div id="diversity-equity-and-inclusion" class="section level2">
 <h2>Diversity, Equity, and Inclusion</h2>
-</div>
-<div id="indigenous-recognition-statement" class="section level2">
-<h2>Indigenous Recognition Statement</h2>
 </div>
 <div id="using-pronouns-and-personal-preference" class="section level2">
 <h2>Using Pronouns and Personal Preference</h2>
 </div>
-<div id="your-well-being" class="section level2">
-<h2>Your Well-being</h2>
+<div id="accessible-education" class="section level2">
+<h2>Accessible Education</h2>
+</div>
+<div id="reporting-title-ix-experiences" class="section level2">
+<h2>Reporting Title IX Experiences</h2>
 </div>
 <div id="reporting-obligations" class="section level2">
 <h2>Reporting Obligations</h2>
+</div>
+<div id="academic-misconduct" class="section level2">
+<h2>Academic Misconduct</h2>
+</div>
+<div id="inclement-weather" class="section level2">
+<h2>Inclement Weather</h2>
+</div>
+<div id="mental-health-and-wellness" class="section level2">
+<h2>Mental Health and Wellness</h2>
+</div>
+<div id="basic-needs" class="section level2">
+<h2>Basic Needs</h2>
+</div>
+<div id="accommodation-for-religious-observances" class="section level2">
+<h2>Accommodation for Religious Observances</h2>
+</div>
+<div id="conflict-resolution" class="section level2">
+<h2>Conflict Resolution</h2>
+</div>
+<div id="grievance-policy" class="section level2">
+<h2>Grievance Policy</h2>
+</div>
+<div id="course-incomplete-policy" class="section level2">
+<h2>Course Incomplete Policy</h2>
 </div>
 <div id="more-per-university-requirements" class="section level2">
 <h2>More per university requirements…</h2>
