--- a/LICENSE.html
+++ b/LICENSE.html
@@ -870,7 +870,9 @@ Lectures
 </div>
 <div class="nav-right">
 <a href="assignments.html">Assignments</a>
-<a href="https://github.com/uo-educ-quant/641">Course repo</a>
+<a href="https://github.com/uo-educ-quant/641">
+<i class="fa fa-github" aria-hidden="true"></i>
+</a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
 </div>
 </nav>
@@ -933,7 +935,10 @@ Lectures
   <a href="assignments.html">Assignments</a>
 </li>
 <li>
-  <a href="https://github.com/uo-educ-quant/641">Course repo</a>
+  <a href="https://github.com/uo-educ-quant/641">
+    <span class="fa fa-github"></span>
+     
+  </a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
