Update drop down on menu bar

--- a/assignments.html
+++ b/assignments.html
@@ -936,13 +936,13 @@ Lectures
 <span class="down-arrow">&#x25BE;</span>
 </button>
 <div class="nav-dropdown-content">
-<a href="EDUC641_1_intro.html">Unit 0: Intro &amp; Sci Principles</a>
-<a href="EDUC641_2_categ_1.html">Unit 1: Categorical descriptives</a>
-<a href="EDUC641_2_categ_2.html">Unit 2: Categorical relationships</a>
-<a href="continuous_I1.html">Unit 3a: Continuous descriptives</a>
-<a href="continuous_I2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
-<a href="EDUC641_4_continuous_2.html">Unit 4a: Continuous relationships</a>
-<a href="EDUC641_4_continuous_3.html">Unit 4b: NHST Critiques &amp; Replicable research</a>
+<a href="./slides/EDUC641_1_intro.html">Unit 0: Intro &amp; Sci Principles</a>
+<a href="./slides/EDUC641_2_categ_1.html">Unit 1: Categorical descriptives</a>
+<a href="./slides/EDUC641_2_categ_2.html">Unit 2: Categorical relationships</a>
+<a href="./slides/continuous_I1.html">Unit 3a: Continuous descriptives</a>
+<a href="./slides/continuous_I2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
+<a href="./slides/EDUC641_4_continuous_2.html">Unit 4a: Continuous relationships</a>
+<a href="./slides/EDUC641_4_continuous_3.html">Unit 4b: NHST Critiques &amp; Replicable research</a>
 </div>
 </div>
 </div>
@@ -985,25 +985,25 @@ Lectures
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="EDUC641_1_intro.html">Unit 0: Intro &amp; Sci Principles</a>
+      <a href="./slides/EDUC641_1_intro.html">Unit 0: Intro &amp; Sci Principles</a>
     </li>
     <li>
-      <a href="EDUC641_2_categ_1.html">Unit 1: Categorical descriptives</a>
+      <a href="./slides/EDUC641_2_categ_1.html">Unit 1: Categorical descriptives</a>
     </li>
     <li>
-      <a href="EDUC641_2_categ_2.html">Unit 2: Categorical relationships</a>
+      <a href="./slides/EDUC641_2_categ_2.html">Unit 2: Categorical relationships</a>
     </li>
     <li>
-      <a href="continuous_I1.html">Unit 3a: Continuous descriptives</a>
+      <a href="./slides/continuous_I1.html">Unit 3a: Continuous descriptives</a>
     </li>
     <li>
-      <a href="continuous_I2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
+      <a href="./slides/continuous_I2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
     </li>
     <li>
-      <a href="EDUC641_4_continuous_2.html">Unit 4a: Continuous relationships</a>
+      <a href="./slides/EDUC641_4_continuous_2.html">Unit 4a: Continuous relationships</a>
     </li>
     <li>
-      <a href="EDUC641_4_continuous_3.html">Unit 4b: NHST Critiques &amp; Replicable research</a>
+      <a href="./slides/EDUC641_4_continuous_3.html">Unit 4b: NHST Critiques &amp; Replicable research</a>
     </li>
   </ul>
 </li>
