--- a/index.html
+++ b/index.html
@@ -940,8 +940,8 @@ Lectures
 <a href="./slides/EDUC641_1_intro.html">Unit 0: Intro &amp; Sci Principles</a>
 <a href="./slides/EDUC641_2_categ_1.html">Unit 1: Categorical descriptives</a>
 <a href="./slides/EDUC641_2_categ_2.html">Unit 2: Categorical relationships</a>
-<a href="./slides/continuous_I1.html">Unit 3a: Continuous descriptives</a>
-<a href="./slides/continuous_I2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
+<a href="./slides/continuous_l1.html">Unit 3a: Continuous descriptives</a>
+<a href="./slides/continuous_l2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
 <a href="./slides/EDUC641_4_continuous_2.html">Unit 4a: Continuous relationships</a>
 <a href="./slides/EDUC641_4_continuous_3.html">Unit 4b: NHST Critiques &amp; Replicable research</a>
 </div>
@@ -995,10 +995,10 @@ Lectures
       <a href="./slides/EDUC641_2_categ_2.html">Unit 2: Categorical relationships</a>
     </li>
     <li>
-      <a href="./slides/continuous_I1.html">Unit 3a: Continuous descriptives</a>
+      <a href="./slides/continuous_l1.html">Unit 3a: Continuous descriptives</a>
     </li>
     <li>
-      <a href="./slides/continuous_I2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
+      <a href="./slides/continuous_l2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
     </li>
     <li>
       <a href="./slides/EDUC641_4_continuous_2.html">Unit 4a: Continuous relationships</a>
