Re-knit CI's slides

--- a/slides/continuous_l1.html
+++ b/slides/continuous_l1.html
@@ -6,7 +6,10 @@
     <meta name="author" content="Professor Name" />
     <script src="continuous_l1_files/header-attrs/header-attrs.js"></script>
     <link href="continuous_l1_files/remark-css/default.css" rel="stylesheet" />
-    <link rel="stylesheet" href="new.css" type="text/css" />
+    <link href="continuous_l1_files/remark-css/uo.css" rel="stylesheet" />
+    <link href="continuous_l1_files/remark-css/ki-fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="my_custom.css" type="text/css" />
+    <link rel="stylesheet" href="xaringanthemer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -14,7 +17,7 @@ class: center, middle, inverse, title-slide
 
 # EDUC 641 Continuous Data
 ### Professor Name
-### 14 September, 2021
+### 22 September, 2021
 
 ---
 
