--- a/syllabus.html
+++ b/syllabus.html
@@ -1051,7 +1051,7 @@ Lectures
 <li>Describe, summarize and visualize the relationships between quantitative data that are categorical and continuous</li>
 <li>Conduct a frequentist null-hypothesis significance test of the relationships between simple categorical and continuous data</li>
 <li>Describe strategies to improve the replicability and generalizability of quantitative research</li>
-<li>Use th R programming language to conduct all such analyses</li>
+<li>Use the R programming language to conduct all such analyses</li>
 </ol>
 </div>
 <div id="textbooks-and-reading-materials" class="section level1">
