--- a/schedule.html
+++ b/schedule.html
@@ -1109,22 +1109,20 @@ Lectures
 <p><strong>Topic: Summarizing and displaying continuous data</strong></p>
 <p>Objectives:</p>
 <ul>
+<li>Describe and summarize quantitative data that are continuous</li>
 <li>Describe the purpose and compute the following measures of central tendency: mean, median and mode</li>
-<li>Describe and summarize quantitative data that are continuous
+<li>Descripe the purpose and compute the following measures of variability: quartiles, inter-quartile range, range, variance and standard deviation
 <ul>
-<li>Includes computing the following measures of variability: quartiles, percentiles, inter-quartile range, range, variance and standard deviation</li>
-<li>Additionally describe conceptually principles of skewness and kurtosis</li>
+<li>Describe conceptually the principles of skewness and kurtosis</li>
 </ul></li>
-<li>Create visualizations of quantitative data that are continuous
+<li>Create visualizations of quantitative data that are continuous using R
 <ul>
-<li>Includes constructing stem-and-leaf, box- and violin-plots</li>
+<li>Includes constructing histograms, densities, stem-and-leaf, and box-and-whisker plots</li>
 </ul></li>
 <li>Describe special features of a normal distribution</li>
-<li>Describe distribution of repeated sample statistics drawn from a population and how this is informative to hypothesis testing</li>
-<li>Apply CLT to understand whether mean value of a variable is different than a defined population value (when provided the SD of the variable)
-<ul>
-<li>Includes conducting single-sample t-test</li>
-</ul></li>
+<li>Describe the distribution of repeated sample statistics drawn from a population, how this relates to the Central Limit Theorem (CLT) and how this is informative to statistical hypothesis testing</li>
+<li>Determine whether the mean value of a sample is different than a defined population value (when provided the <em>SD</em> of the variable, aka <span class="math inline">\(Z\)</span>-test)</li>
+<li>Conduct one-sample <span class="math inline">\(t\)</span>-tests</li>
 </ul>
 <p>Readings:</p>
 <ul>
