--- a/slides/EDUC641_4_continuous_2.html
+++ b/slides/EDUC641_4_continuous_2.html
@@ -43,9 +43,11 @@ class: center, middle, inverse, title-slide
 
 
 ---
-# Reminder of our motivating question
+# Reminder of motivating question
 
-### .blue[Do individuals living in countries with more total years of attendance in school experience, on average, higher life expectancy?]
+#### We learned a lot about the distribution of life expectancy in countries, now we are turning to thinking about relationships between life expectancy and other variables. In particular:
+
+#### .blue[Do individuals living in countries with more total years of attendance in school experience, on average, higher life expectancy?]
 
 #### In other words, we are asking whether the variables *SCHOOLING* and *LIFE_EXPECTANCY* are related.
 
@@ -58,9 +60,9 @@ class: center, middle, inverse, title-slide
 
 ---
 class: middle, inverse
-# Bivariate relationships between continuous variables
+# Bivariate relationships between continuous variables&lt;sup&gt;1&lt;/sup&gt;
 
-
+.footnote[[1] We can also look at relationships between continuous and categorical variables with increasingly sophisticated methods, including two-sample t-tests, regression, ANOVA and more. We will examine these topics in EDUC 643.]
 ---
 # Recall life expectancy distr.
 
