Add synthesis slide Continuous 1

--- a/slides/continuous_l1.html
+++ b/slides/continuous_l1.html
@@ -617,7 +617,7 @@ So we have characterized some features of the average national life expectancy a
 
 --
 
-### .purple[**That is where we will turn to next!**]
+#### .purple[**That is where we will turn to in the next unit! But first, we need to learn more about how to make statistical inferences!**]
 
 ---
 class: middle, inverse
