--- a/syllabus.html
+++ b/syllabus.html
@@ -1088,7 +1088,7 @@ Lectures
 <div id="schedule" class="section level1">
 <h1>Schedule</h1>
 <p>For more details, see <a href="./schedule.html">here</a>.</p>
-<table>
+<table style="width:100%;">
 <colgroup>
 <col width="2%" />
 <col width="2%" />
@@ -1153,7 +1153,7 @@ Lectures
 <td align="left">11</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Assignment 5</td>
+<td align="left">Final Project</td>
 <td align="left">-</td>
 </tr>
 </tbody>
@@ -1163,9 +1163,9 @@ Lectures
 <h1>Grading Components and Criteria</h1>
 <p>Final grades will be based on the following components:</p>
 <ul>
-<li>Quizzes: X%</li>
-<li>Assignments: Y%</li>
-<li>Final: Z%</li>
+<li>Quizzes: 10% (5 quizzes worth 2% each)</li>
+<li>Assignments: 60% (4 assignments worth 15% each)</li>
+<li>Final: 30%</li>
 </ul>
 <div id="quizzes" class="section level2">
 <h2>Quizzes</h2>
@@ -1173,9 +1173,11 @@ Lectures
 </div>
 <div id="assignments" class="section level2">
 <h2>Assignments</h2>
+<p>The goal of the assignments is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. Each assignment has an associated data source, short codebook and detailed instructions for the required data and analytic tasks. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your response. Further assignment details are available <a href="./assignments.html">here</a></p>
 </div>
 <div id="final" class="section level2">
 <h2>Final</h2>
+<p>The final assignment involves a more extended application and synthesis of the concepts of descriptive and relational applied data analysis covered in this course.</p>
 </div>
 </div>
 <div id="student-engagement-inventory" class="section level1">
