--- a/slides/EDUC641_4_continuous_2.html
+++ b/slides/EDUC641_4_continuous_2.html
@@ -233,7 +233,7 @@ Can think of the OLS-fitted regression line as a stick held in place by thumbtac
 
 ---
 # A visualization
-&lt;iframe src="C:/Users/daviddl/Documents/EDUC/641/line_SS/app.R?showcase=0" width="100%" height="400px"&gt;&lt;/iframe&gt;
+&lt;iframe src="https://daviddl.shinyapps.io/line_ss/?showcase=0" width="100%" height="550px"&gt;&lt;/iframe&gt;
 
 ---
 # Implementing in R
