--- a/assignments.html
+++ b/assignments.html
@@ -1058,7 +1058,7 @@ Lectures
 </ul>
 <p>Deadline: TBD</p>
 <p>Download: <a href="./assignments/assignment01.html">html file</a>; <a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment01_key.docx">doc file</a>; <a href="./assignments/keys/assignment01_key.R">R script</a></p>
+<p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-2" class="section level2">
 <h2>3.2. Assignment 2</h2>
@@ -1073,7 +1073,7 @@ Lectures
 </ul>
 <p>Deadline: TBD</p>
 <p>Download: <a href="./assignments/assignment02.html">html file</a>; <a href="./data/cat.csv">cat.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment02_key.docx">doc file</a>; <a href="./assignments/keys/assignment02_key.R">R script</a></p>
+<p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-3" class="section level2">
 <h2>3.3. Assignment 3</h2>
@@ -1085,21 +1085,21 @@ Lectures
 </ul>
 <p>Deadline: TBD</p>
 <p>Download: <a href="./assignments/assignment03.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment03_key.docx">doc file</a>; <a href="./assignments/keys/assignment03_key.R">R script</a></p>
+<p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
 <p>Continuous data 2: intro to bivariate regression</p>
 <p>Deadline: TBD</p>
 <p>Download: <a href="./assignments/assignment04.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment04_key.docx">doc file</a>; <a href="./assignments/keys/assignment04_key.R">R script</a></p>
+<p>Key: [doc file]; [R script]</p>
 </div>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
 <p>Final assignment</p>
 <p>Deadline: TBD</p>
 <p>Download: <a href="./assignments/assignment05.html">html file</a>; <a href="./data/ah01.csv">ah01.csv dataset</a>; <a href="./data/ah02.csv">ah02.csv dataset</a></p>
-<p>Key: <a href="./assignments/keys/assignment05_key.docx">doc file</a>; <a href="./assignments/keys/assignment05_key.R">R script</a></p>
+<p>Key: [doc file]; [R script]</p>
 </div>
 </div>
 
