--- a/slides/EDUC641_4_continuous_3.html
+++ b/slides/EDUC641_4_continuous_3.html
@@ -4,7 +4,7 @@
     <title>Null-Hypothesis Significance Testing (NHST) critiques</title>
     <meta charset="utf-8" />
     <meta name="author" content="TBD" />
-    <script src="EDUC641_4_continuous_3_files/header-attrs-2.11/header-attrs.js"></script>
+    <script src="EDUC641_4_continuous_3_files/header-attrs-2.11.22/header-attrs.js"></script>
     <link href="EDUC641_4_continuous_3_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="EDUC641_4_continuous_3_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
     <link href="EDUC641_4_continuous_3_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
@@ -92,7 +92,7 @@ In frequentist statistics, we establish an objective decision rule: if our obser
 - Once we set a threshold (an `\(\alpha\)`-theshold), we are making a binary decision about significance and non-significance
 
 - Relationships are *NOT* "more" or "less" significant 
- + In fact, the distribution of *p*-values on either side of the alpha threshold is assumed to be uniform; thus, it's not correct to describe observed vs. expected probabilities in relationship to each (e.g., a *p*-value of 0.01 is **not** three times less likely than a *p*-value of 0.03). 
+ + In fact, the distribution of *p*-values under the null hypothesis is a uniform one; thus, it's not correct to describe observed vs. expected probabilities in relationship to each (e.g., a *p*-value of 0.01 is **not** three times less likely than a *p*-value of 0.03). 
 
 
 - Many of these concerns (and conflicts) relate to different ways of thinking about probability
@@ -197,7 +197,7 @@ The range of the Bayesian estimates for the Year 2 student evaluation ratings is
 ]
 
 .pull-right[
-&lt;img src="freqBayes.jpg" style="display: block; margin: auto;" /&gt;
+&lt;img src="freqBayes.jpg" width="1168" style="display: block; margin: auto;" /&gt;
 ]
 
 ---
