--- a/assignments.html
+++ b/assignments.html
@@ -629,7 +629,7 @@ body {
   padding-top: 60px;
 }
 </style>
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14.3/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -681,6 +681,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -701,6 +702,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -758,11 +762,15 @@ $(document).ready(function () {
     href = "index.html";
   var menuAnchor = $('a[href="' + href + '"]');
 
-  // mark it active
-  menuAnchor.tab('show');
-
-  // if it's got a parent navbar menu mark it active as well
-  menuAnchor.closest('li.dropdown').addClass('active');
+  // mark the anchor link active (and if it's in a dropdown, also mark that active)
+  var dropdown = menuAnchor.closest('li.dropdown');
+  if (window.bootstrap) { // Bootstrap 4+
+    menuAnchor.addClass('active');
+    dropdown.find('> .dropdown-toggle').addClass('active');
+  } else { // Bootstrap 3
+    menuAnchor.parent().addClass('active');
+    dropdown.addClass('active');
+  }
 
   // Navbar adjustments
   var navHeight = $(".navbar").first().height() + 15;
@@ -936,13 +944,25 @@ Lectures
 <span class="down-arrow">&#x25BE;</span>
 </button>
 <div class="nav-dropdown-content">
-<a href="./slides/EDUC641_1_intro.html">Unit 0: Intro &amp; Sci Principles</a>
-<a href="./slides/EDUC641_2_categ_1.html">Unit 1: Categorical descriptives</a>
-<a href="./slides/EDUC641_2_categ_2.html">Unit 2: Categorical relationships</a>
-<a href="./slides/continuous_l1.html">Unit 3a: Continuous descriptives</a>
-<a href="./slides/continuous_l2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
-<a href="./slides/EDUC641_4_continuous_2.html">Unit 4a: Continuous relationships</a>
-<a href="./slides/EDUC641_4_continuous_3.html">Unit 4b: NHST Critiques &amp; Replicable research</a>
+<a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
+<span class="nav-dropdown-header">2. Variables</span>
+<span class="nav-dropdown-header">3. Categorical descriptives</span>
+<span class="nav-dropdown-header">4. Categorical relationships I</span>
+<span class="nav-dropdown-header">5. Categorical relationships II</span>
+<span class="nav-dropdown-header">6. Troubling history of stats</span>
+<span class="nav-dropdown-header">7. Continuous descriptives I</span>
+<span class="nav-dropdown-header">8. Continuous descriptives II</span>
+<span class="nav-dropdown-header">9. Z-scores and effect sizes</span>
+<span class="nav-dropdown-header">10. CLT I</span>
+<span class="nav-dropdown-header">11. CLT II</span>
+<span class="nav-dropdown-header">12. NHST</span>
+<span class="nav-dropdown-header">13. One-sample t-tests</span>
+<span class="nav-dropdown-header">14. Continuous relationships I</span>
+<span class="nav-dropdown-header">15. Continuous relationships II</span>
+<span class="nav-dropdown-header">16. Continuous relationships III</span>
+<span class="nav-dropdown-header">17. Correlation and causality</span>
+<span class="nav-dropdown-header">18. NHST critiques</span>
+<span class="nav-dropdown-header">Summing up</span>
 </div>
 </div>
 </div>
@@ -962,7 +982,7 @@ Lectures
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -978,33 +998,33 @@ Lectures
   <a href="schedule.html">Schedule</a>
 </li>
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Lectures
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="./slides/EDUC641_1_intro.html">Unit 0: Intro &amp; Sci Principles</a>
+      <a href="./slides/EDUC641_1_intro.html">1. Intro &amp; research design</a>
     </li>
-    <li>
-      <a href="./slides/EDUC641_2_categ_1.html">Unit 1: Categorical descriptives</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_2_categ_2.html">Unit 2: Categorical relationships</a>
-    </li>
-    <li>
-      <a href="./slides/continuous_l1.html">Unit 3a: Continuous descriptives</a>
-    </li>
-    <li>
-      <a href="./slides/continuous_l2.html">Unit 3b: Central Limit Theorem &amp; Inference</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_continuous_2.html">Unit 4a: Continuous relationships</a>
-    </li>
-    <li>
-      <a href="./slides/EDUC641_4_continuous_3.html">Unit 4b: NHST Critiques &amp; Replicable research</a>
-    </li>
+    <li class="dropdown-header">2. Variables</li>
+    <li class="dropdown-header">3. Categorical descriptives</li>
+    <li class="dropdown-header">4. Categorical relationships I</li>
+    <li class="dropdown-header">5. Categorical relationships II</li>
+    <li class="dropdown-header">6. Troubling history of stats</li>
+    <li class="dropdown-header">7. Continuous descriptives I</li>
+    <li class="dropdown-header">8. Continuous descriptives II</li>
+    <li class="dropdown-header">9. Z-scores and effect sizes</li>
+    <li class="dropdown-header">10. CLT I</li>
+    <li class="dropdown-header">11. CLT II</li>
+    <li class="dropdown-header">12. NHST</li>
+    <li class="dropdown-header">13. One-sample t-tests</li>
+    <li class="dropdown-header">14. Continuous relationships I</li>
+    <li class="dropdown-header">15. Continuous relationships II</li>
+    <li class="dropdown-header">16. Continuous relationships III</li>
+    <li class="dropdown-header">17. Correlation and causality</li>
+    <li class="dropdown-header">18. NHST critiques</li>
+    <li class="dropdown-header">Summing up</li>
   </ul>
 </li>
       </ul>
@@ -1034,16 +1054,30 @@ Lectures
 
 <div id="general-guidelines" class="section level1">
 <h1>1. General Guidelines</h1>
-<p>The goal of the assignments is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your responses.</p>
-<p>(Here we need to add more details about global expectations and requirements for all the assignments, grading and points distribution for participation, five assignments, and/or final project/exam, late submission policy, etc. from syllabus.)</p>
+<p>The goal of the assignments is to practice the concepts and
+vocabulary we have been modeling in class and implement some of the
+techniques we have learned. You may work on your own or collaborate with
+one (1) partner. Please make sure that you engage in a a full, fair and
+mutually-agreeable collaboration if you do choose to collaborate. If you
+do collaborate, you should plan, execute and write-up your analyses
+together, not simply divide the work. Please make sure to indicate
+clearly when your work is joint and any other individual or resource
+(outside of class material) you consulted in your responses.</p>
+<p>(Here we need to add more details about global expectations and
+requirements for all the assignments, grading and points distribution
+for participation, five assignments, and/or final project/exam, late
+submission policy, etc. from syllabus.)</p>
 </div>
 <div id="submission-requirements" class="section level1">
 <h1>2. Submission Requirements</h1>
 <p>Please upload below two files on Canvas before TBD time:</p>
 <ul>
-<li>An .html, .doc/x, or .pdf file that includes your typed responses (in your own words and not identical to anybody else’s), tables, and/or figures to the problems<br />
+<li>An .html, .doc/x, or .pdf file that includes your typed responses
+(in your own words and not identical to anybody else’s), tables, and/or
+figures to the problems<br />
 </li>
-<li>The .Rmd or .R file that you used to render the tables and figures in the above html/doc/pdf.</li>
+<li>The .Rmd or .R file that you used to render the tables and figures
+in the above html/doc/pdf.</li>
 </ul>
 </div>
 <div id="details-about-assignments" class="section level1">
@@ -1057,7 +1091,8 @@ Lectures
 <li><p>Create visualizations of categorical data</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment01.html">html file</a>; <a href="./data/cat.csv">cat.csv dataset</a></p>
+<p>Download: <a href="./assignments/assignment01.html">html file</a>; <a
+href="./data/cat.csv">cat.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-2" class="section level2">
@@ -1066,13 +1101,18 @@ Lectures
 <p>Objectives of this assignment</p>
 <ul>
 <li><p>Describe relationships between categorical variables</p></li>
-<li><p>Calculate an index of the strength of the relationship between two categorical variables, the chi-squared (<span class="math inline">\(\chi^2\)</span>) statistic</p></li>
+<li><p>Calculate an index of the strength of the relationship between
+two categorical variables, the chi-squared (<span
+class="math inline">\(\chi^2\)</span>) statistic</p></li>
 <li><p>Formulate and describe the purpose of a null hypothesis</p></li>
-<li><p>Conceptually describe the criteria to make a statistical inference from a sample to a population</p></li>
-<li><p>Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic</p></li>
+<li><p>Conceptually describe the criteria to make a statistical
+inference from a sample to a population</p></li>
+<li><p>Interpret and report the results of a contingency-table analysis
+and a statistical inference from a chi-squared statistic</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment02.html">html file</a>; <a href="./data/cat.csv">cat.csv dataset</a></p>
+<p>Download: <a href="./assignments/assignment02.html">html file</a>; <a
+href="./data/cat.csv">cat.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-3" class="section level2">
@@ -1084,21 +1124,25 @@ Lectures
 <li><p>Create visualizations of continuous data</p></li>
 </ul>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment03.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
+<p>Download: <a href="./assignments/assignment03.html">html file</a>; <a
+href="./data/cont.csv">cont.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
 <p>Continuous data 2: intro to bivariate regression</p>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment04.html">html file</a>; <a href="./data/cont.csv">cont.csv dataset</a></p>
+<p>Download: <a href="./assignments/assignment04.html">html file</a>; <a
+href="./data/cont.csv">cont.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
 <p>Final assignment</p>
 <p>Deadline: TBD</p>
-<p>Download: <a href="./assignments/assignment05.html">html file</a>; <a href="./data/ah01.csv">ah01.csv dataset</a>; <a href="./data/ah02.csv">ah02.csv dataset</a></p>
+<p>Download: <a href="./assignments/assignment05.html">html file</a>; <a
+href="./data/ah01.csv">ah01.csv dataset</a>; <a
+href="./data/ah02.csv">ah02.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 </div>
