--- a/slides/EDUC641_1_intro.html
+++ b/slides/EDUC641_1_intro.html
@@ -4,7 +4,7 @@
     <title>Introduction and Principles of Quantitative Research</title>
     <meta charset="utf-8" />
     <meta name="author" content="TBD" />
-    <script src="EDUC641_1_intro_files/header-attrs-2.11/header-attrs.js"></script>
+    <script src="EDUC641_1_intro_files/header-attrs-2.14.3/header-attrs.js"></script>
     <link href="EDUC641_1_intro_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="EDUC641_1_intro_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
     <link href="EDUC641_1_intro_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
@@ -15,9 +15,15 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Introduction and Principles of Quantitative Research
+]
+.subtitle[
 ## EDUC 641: Intro
+]
+.author[
 ### TBD
+]
 
 ---
 
@@ -249,6 +255,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
